[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Map/Barraca Frank.png" type="Texture" id=1]
[ext_resource path="res://scripts/buyzone.gd" type="Script" id=2]
[ext_resource path="res://scenes/shopmenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/semente_de_abobora.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.5, 8 )

[node name="buyzone" type="StaticBody2D"]
collision_layer = 4
collision_mask = 27
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 38 )
shape = SubResource( 3 )

[node name="shopmenu" parent="." instance=ExtResource( 3 )]
position = Vector2( -37, -68 )

[node name="semente_de_abobora" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 9 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
